<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_background"
    android:tag="RegisterF"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".RegisterFragment">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:background="@drawable/border1"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="@dimen/app_bar_height"
        android:inputType="textPersonName"
        android:hint="@string/enter_name"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_email_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/et_name"
        android:padding="10dp"
        android:background="@drawable/border1"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email" />

    <EditText
        android:id="@+id/et_password_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:padding="10dp"
        android:background="@drawable/border1"
        android:layout_below="@+id/et_email_reg"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:hint="@string/enter_password" />

    <EditText
        android:id="@+id/et_confirm_password_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:padding="10dp"
        android:background="@drawable/border1"
        android:layout_below="@+id/et_password_reg"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"/>


    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_confirm_password_reg"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_centerInParent="true">
        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"/>
        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="150dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/et_password_reg"
        android:layout_centerVertical="true"
        android:background="@drawable/border1"
        android:text="@string/submit"
        android:textAlignment="center" />
</RelativeLayout>