<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_background"
    android:tag="RegisterF"
    tools:context=".RegisterFragment">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/app_bar_height"
        android:inputType="textPersonName"
        android:hint="@string/enter_name"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_email_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/et_name"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"

        android:inputType="textEmailAddress"
        android:hint="@string/enter_email" />

    <EditText
        android:id="@+id/et_password_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/et_email_reg"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:hint="@string/enter_password" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password_reg"
        android:layout_centerVertical="true"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="150dp"
        android:text="@string/submit"
        android:textAlignment="center" />
</RelativeLayout>