<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/border1"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_movie_title"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/movie_header"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/tv_movie_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_movie_title"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/textview" />


    <Button
        android:id="@+id/btn_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_movie_title"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="180dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/tv_movie_name"
        android:background="@drawable/border1"
        android:text="@string/view"
        android:textColor="@color/colorBlue" />

</RelativeLayout>