<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="56dp"
    android:background="@android:color/white"
    tools:context=".DescriptionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:contentDescription="@string/descriptionheader"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/nav_header_background" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-50dp"
                app:srcCompat="@drawable/profile_pic"
                android:layout_gravity="center"
                android:contentDescription="@string/movie_header"/>

            <TextView
                android:id="@+id/tv_movie_description_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textStyle="bold"
                android:text="Movie Name"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_header"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"/>

            <TextView
                android:id="@+id/tv_description"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"/>
        </LinearLayout>

</android.support.v4.widget.NestedScrollView>