<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@drawable/profile_background"
    android:tag="ProfileF"
    tools:context=".ProfileFragment">


    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"

        android:id="@+id/iv_profile_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:padding="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/man"
        app:civ_border_color="#FFFFFFFF"
        app:civ_border_width="3dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_profile_img"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="20dp"
        android:paddingRight="5dp"
        android:paddingBottom="20dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/name"
            android:id="@+id/til_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tv_name_value"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:textAlignment="center"
                android:padding="10dp"
                android:text="@string/abcd"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_email"
            android:gravity="center"
            android:hint="@string/email"
            android:layout_marginTop="20dp"
            android:layout_below="@id/til_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tv_email_value"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name_value"
                android:clickable="false"
                android:padding="10dp"
                android:text="@string/xyz_abc_com"
                android:textAlignment="center"
                android:textSize="20sp"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_gender"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/gender"
            android:layout_below="@id/til_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tv_gender_value"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_email_value"
                android:textAlignment="center"
                android:clickable="false"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:text="@string/male"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
</RelativeLayout>