<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_background"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    tools:context=".LoginRegisterFragment"
    tools:openDrawer="start">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/logoborder"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/openload_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/loginregisterborder"
            android:text="@string/login"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_register"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="106dp"

            android:background="@drawable/loginregisterborder"
            android:text="@string/register"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</RelativeLayout>
