<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/login_fragment"
    android:layout_marginTop="?attr/actionBarSize"
    android:tag="LoginF"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:contentDescription="@string/head_image"
        app:srcCompat="@drawable/nav_header_background"
        android:scaleType="fitXY"
        tools:ignore="MissingConstraints" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_email_til"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/imageView2">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email2"
            android:layout_height="38dp"
            android:layout_width="match_parent"
            android:hint="@string/enter_email"
            android:drawableEnd="@drawable/email_img"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/borderview"
            app:boxStrokeColor="@color/colorWhite" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_submit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/colorWhite"
        android:background="@drawable/my_border"
        android:text="@string/submit" />



    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_password_til"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/et_email_til"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password2"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/borderview"
            app:boxStrokeColor="@color/colorWhite" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>